7. Added delimitAllCoumns to table configurations
8. Added page describing some of PostgreSQL idiosyncracies with Ibator
9. IBATIS-586 - Added the ability to specify nested property elements on
   columnOverrides (thanks to Dan Turkenkopf for the idea and a nice initial patch)
10. Gather column comments during introspection
11. IBATIS-592 - Additional attributes for SqlMaps
12. Fixed addCriterionfor JDBC* methods so that they all do a null check
13. Fixed IbatorRunner so that configuration errors are shown (thanks to Karel Rank)
14. Added XML ids to changeable attributes on introspected table, also
    change the XML merger so that the XML ids no longer need to contain
    the prefix "ibatorgenerated_"
15. Many refactorings to make way for iBATIS3
16. IBATIS-605 - Added Informix Dialect
17. Added ability to set annotations on method parameters
18. Addedd support for "distinct" on select by example methods

-------------------------------------------------------------------------------
Version 1.2.1:

Bugs:
1. Fixed IbatorObjectFactory so that it will find internal classes on the
   context classloader.
2. Fixed IBATIS-565 - ill formed comment in the SqlMapConfigPlugin.

Enhancements:
1. Modified plugin methods for model fields, getters, and setters so that
   the plugin will know which type of class (Primary Key, Base Record, or
   Record with BLOBs) is being generated. 
2. Added methods to IntrospectedTable to get/set attributes.  This 
   allows plugin classes to maintain table based state between
   plugin calls.
3. Added "initialized" method to the plugin API.  This
   allows plugins to alter some of the fundamental code generation items
   (like the name of a generated class, for example).
4. Added an example plugin to show usage of the "initialized" method.

-------------------------------------------------------------------------------
Version 1.2.0:  Renamed to Ibator

Bugs:
1. Fixed the JavaTypeResolver so that an unsupported data type can be